# graphhopper-kanto

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  build.sh  config-gh.yml  config-others.yml  docker-compose.yml  download.sh  get_isochrones.ipynb  graphhopper.sh  pyproject.toml
.github/: build-and-upload.sh
custom_models/: bike-japan.json  car-japan.json  foot-japan.json
